# lxfu

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  QUICKREF.md  README.md  TEST_SCENARIOS.md  build.sh  install.sh  lxfu.conf  uninstall.sh
packaging/: dev.nabeeladzan.lxfu.conf  lxfu-face.service
src/: config.hpp  face_detector.hpp  face_engine.hpp  face_service.cpp  face_service.hpp  face_service_main.cpp  lmdb_store.hpp  lxfu.cpp  main.cpp  pam_lxfu.cpp
